--- a/views/booking/addBooking.handlebars
+++ b/views/booking/addBooking.handlebars
@@ -1,55 +1,48 @@
-<div class="container">
-	<div class="card card-body">
-		<h3>Booking a Service</h3>
-		<form action="" method="post">
-			<div class="form-group">
-				<div class="row mb-2">
-					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4">
-						<label class="font-italic" for="name">Name</label>
+<div class="row">
+    <div class="col-md-6 mx-auto">
+        <div class="card card-body" style="border-radius: 60px ; top: 20px; right:40px;">
+            <img class="logo" src="/img/logo.png">
+            <h3 class="text-center" style="padding-top: 15px;">Book a service</h3>
+            <form action="" method="post">
+                <div>
+                    <div class="form-group left spacing1">
+                        <label class="font-italic" for="name">Name</label>
 						<input class="form-control" id="name" name="name" onblur="initialiseName()" required />
-					</div>
-					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
-						<label class="font-italic">Date</label>
-						<input id="datepicker" width="200" name="dateRelease" required/>
-					</div>
-				</div>
-			</div>
-
-
-			<div class="form-group">
-				<div class="row mb-2">
-					<div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4">
+                    </div>
+                    <div class="form-group left spacing2">
+                    	<label class="font-italic">Date</label>
+                        <input id="datepicker" width="200" name="dateRelease" required/>
+                    </div>
+                    <div class="form-group left spacing1">
                         <label class="font-italic" for="email">Email</label>
                         <input class="form-control" id="email" name="email" type="email" required />
-					</div>	
-					<div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
-						<label class="font-italic" for="contactno">Contact No.</label>
+                    </div>
+                    <div class="form-group left spacing2">
+                        <label class="font-italic" for="contactno">Contact No.</label>
 						<input class="form-control" id="contactno" name="contactno" type="text" required />
-					</div>	
-                </div>	
-			</div>
+                    </div>
 
-			<div class="form-group">
-                <label class="font-italic" for="service">Service</label>
-                <br>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="consultation" value="consultation" name="service">
-                    <label class="form-check-label" for="consultation">Consultation</label>
+                    <div class="form-group clear left spacing1">
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" id="consultation" value="consultation" name="service">
+							<label class="form-check-label" for="consultation">Consultation</label>
+						</div>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" id="cupping" value="cupping" name="service">
+							<label class="form-check-label" for="cupping">Cupping</label>
+						</div>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" id="acupuncture" value="acupuncture" name="service">
+							<label class="form-check-label" for="acupuncture">Acupuncture</label>
+						</div>                    
+					</div>
+                <div class=" centered clear" style="padding-top:25px;">
+                    <button type="submit" class="staffbtn" >Book Service</button>
                 </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="cupping" value="cupping" name="service">
-                    <label class="form-check-label" for="cupping">Cupping</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="acupuncture" value="acupuncture" name="service">
-                    <label class="form-check-label" for="acupuncture">Acupuncture</label>
-                </div>
-			</div>
-			<br>
-			<button id="btnSubmit" type="submit" class="btn btn-primary">Add
-			</button>
-		</form>
-	</div>
+
+            </form>
+        </div>
+    </div>
 </div>
 
 <script>
