--- a/views/partials/_accountnav.handlebars
+++ b/views/partials/_accountnav.handlebars
@@ -28,7 +28,7 @@
 
             <hr>
                   <li class="nav-item"  >
-                <a class="nav-link " style="left:15px; color:black; font-weight:bold;" href="">
+                <a class="nav-link " style="left:15px; color:black; font-weight:bold;" href="/user/listUserVoucher">
                    VOUCHER</a>
             </li>
 
