--- a/views/voucher/addVoucher.handlebars
+++ b/views/voucher/addVoucher.handlebars
@@ -1,35 +1,69 @@
 <div class="row">
-     <a href="/voucher/listVoucher" style="color: grey ;float:left; padding-left:40px; font-size:large" ><u> <i class="fa-solid fa-chevron-left"></i>Back</u></a>
-    <div class="col-md-6 mx-auto">
-        <div class="card card-body" style="border-radius: 60px ; top: 20px; right:40px;">
-            <img class="logo2 cen2" src="/img/whitelogo.png">
-            <h3 class="text-center" style="padding-top: 15px;">ADD VOUCHER</h3>
+    <a href="/voucher/listVoucher" style="color: grey ;float:left; padding-left:40px; font-size:large"><u> <i
+                class="fa-solid fa-chevron-left"></i>Back</u></a>
+
+    <div id="content">
+        <div class="container-fluid">
+            <h1 class="display-4">Add Voucher</h1>
+        </div>
+    </div>
+
+
+    <div class="col-md-10 mx-auto">
+        <div class="card card-body" style="border-radius: 60px ; top: 20px; ">
+            {{!-- <img class="logo2 cen2" src="/img/whitelogo.png"> --}}
             <form action="" method="post">
                 <div>
-                    <div class="form-group left spacing1">
-                        <label for="vname">Voucher Name</label>
+                    <div class="form-group left spacingv" style="padding-top:30px;">
+                        <label for="vname">Voucher Name:</label>
                         <input type="text" class="form-control" name="vname" value="{{vname}}" required>
                     </div>
-                    <div class="form-group left spacing2">
-                        <label for="discount">Discount</label>
-                        <input type="text" class="form-control" name="discount" value="{{discount}}" required>
-                    </div>
-                    <div class="form-group left spacing1">
-                        <label for="minspend">Minimum Spend</label>
-                        <input type="text" class="form-control" name="minspend" value="{{minspend}}" id="firstname" onblur="initialiseFirstname()" required>
-                    </div>
-                    <div class="form-group left spacing2">
-                        <label for="code">Code</label>
-                        <input type="text" class="form-control" name="code" value="{{code}}" id="lastname" onblur="initialiseLastname()"required>
-                    </div>
-                    
-                    <div class="form-group clear left spacing1">
-                        <label for="valid">Valid Till</label>
-                       <input id="datepicker" width="222" name="valid" value="{{valid}}" required />
-                        {{!-- <input type="date" name="valid" class="form-control" value="{{valid}}" required> --}}
+
+                    <div class="form-group left spacingv2" style="padding-top:30px;">
+                        <label for="code">Code: </label>
+                        <input type="text" class="form-control" name="code" value="{{code}}" id="lastname"
+                            onblur="initialiseLastname()" required>
                     </div>
 
-                <div style="padding-top:25px; padding-left:45px; float:right;">
+                    {{!-- <div class="form-group left spacing2">
+                        <label for="dtype">Discount Type</label>
+                        <input type="text" class="form-control" name="dtype" value="{{dtype}}" required>
+                    </div> --}}
+                    <div class="form-group clear left spacingv">
+                        <label for="dtype">Discount Type:</label>
+                        <br>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="% off" value="% off" name="dtype" checked>
+                            <label class="form-check-label" for="% off">% off</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="$ off" value="$ off" name="dtype" required>
+                            <label class="form-check-label" for="% off">$ off</label>
+                        </div>
+                    </div>
+
+                    <div class="form-group left spacingsv2">
+                        <label for="discount">Discount: ($/%)</label>
+                        <input type="text" class="form-control" name="discount" value="{{discount}}" required>
+                    </div>
+                    <div class="form-group clear left spacingv">
+                        <label for="minspend">Minimum Spend ($) </label>
+                        <input type="text" class="form-control" name="minspend" value="{{minspend}}" id="firstname"
+                            onblur="initialiseFirstname()" required>
+                    </div>
+                    <div class="form-group left spacingv2">
+                        <label for="limituse">Limit Use: </label>
+                        <input type="text" class="form-control" name="limituse" value="{{limituse}}" required>
+                    </div>
+
+                    <div class="form-group clear left spacingv" style="padding-bottom:30px ;">
+                        <label for="valid">Valid Till</label>
+                        <input id="datepicker" width="222" name="valid" value="{{valid}}" required />
+                        
+                    </div> 
+
+
+                    <div class="left spacingv2" style="padding-top:25px; padding-left:20px">
                     <button type="submit" class="staffbtn" >ADD VOUCHER</button>
                 </div>
 
@@ -38,12 +72,29 @@
     </div>
 </div>
 
+
+
+
+<style>
+
+.spacingv {
+  margin-left: 13%
+}
+
+.spacingv2 {
+  margin-left: 30%
+}
+
+.spacingsv2{
+  margin-left: 37.5%
+}
+
+</style>
 <script>
-	$('#datepicker').datepicker({
-		format: 'dd/mm/yyyy',
-		uiLibrary: 'bootstrap4',
-		value: moment().format('DD/MM/YYYY'),
-	});
+    $('#datepicker').datepicker({
+        format: 'dd/mm/yyyy',
+        uiLibrary: 'bootstrap4',
+        value: moment().format('DD/MM/YYYY'),
+    });
+
 </script>
-
-
