--- a/views/voucher/addVoucher.handlebars
+++ b/views/voucher/addVoucher.handlebars
@@ -16,19 +16,15 @@
                 <div>
                     <div class="form-group left spacingv" style="padding-top:30px;">
                         <label for="vname">Voucher Name:</label>
-                        <input type="text" class="form-control" name="vname" value="{{vname}}" required>
+                        <input type="text" class="form-control" name="vname" value="{{vname}}" id="firstname"
+                            onblur="initialiseFirstname()" required>
                     </div>
 
                     <div class="form-group left spacingv2" style="padding-top:30px;">
                         <label for="code">Code: </label>
-                        <input type="text" class="form-control" name="code" value="{{code}}" id="lastname"
-                            onblur="initialiseLastname()" required>
+                        <input type="text" class="form-control" name="code" value="{{code}}" required>
                     </div>
 
-                    {{!-- <div class="form-group left spacing2">
-                        <label for="dtype">Discount Type</label>
-                        <input type="text" class="form-control" name="dtype" value="{{dtype}}" required>
-                    </div> --}}
                     <div class="form-group clear left spacingv">
                         <label for="dtype">Discount Type:</label>
                         <br>
@@ -38,7 +34,7 @@
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" id="$ off" value="$ off" name="dtype" required>
-                            <label class="form-check-label" for="% off">$ off</label>
+                            <label class="form-check-label" for="$ off">$ off</label>
                         </div>
                     </div>
 
@@ -48,8 +44,7 @@
                     </div>
                     <div class="form-group clear left spacingv">
                         <label for="minspend">Minimum Spend ($) </label>
-                        <input type="text" class="form-control" name="minspend" value="{{minspend}}" id="firstname"
-                            onblur="initialiseFirstname()" required>
+                        <input type="text" class="form-control" name="minspend" value="{{minspend}}" required>
                     </div>
                     <div class="form-group left spacingv2">
                         <label for="limituse">Limit Use: </label>
@@ -67,7 +62,7 @@
                     <button type="submit" class="staffbtn" >ADD VOUCHER</button>
                 </div>
 
-            </form>
+            </form>   
         </div>
     </div>
 </div>
@@ -94,7 +89,8 @@
     $('#datepicker').datepicker({
         format: 'dd/mm/yyyy',
         uiLibrary: 'bootstrap4',
-        value: moment().format('DD/MM/YYYY'),
+        value: moment().add(3, 'day').format('DD-MM-YYYY')
+
     });
 
 </script>
