--- a/views/product/catalogue.handlebars
+++ b/views/product/catalogue.handlebars
@@ -29,7 +29,7 @@
                                 
                                 <br>
 
-                                <h7> {{size}} Servings <small class="text-muted">(Per Pack)</small></h7>
+                                <h7> Servings <small class="text-muted">(Per Pack)</small></h7>
                             </div>
 
                             <hr>
