--- a/views/product/itemDesc.handlebars
+++ b/views/product/itemDesc.handlebars
@@ -41,7 +41,7 @@
                     <article class="product-info-aside">
 
                         <h2 class="title mt-3 productName">{{product.name}}</h2>
-                        <a href="#" class="title mb-2">{{product.category}}</a>
+                        <a href="#" class="title mb-2">{{replaceCommas product.category}}</a>
 
                         <div class="rating-wrap mb-2">
                             <ul class="rating-stars">
