--- a/views/quiz/listQuizzes.handlebars
+++ b/views/quiz/listQuizzes.handlebars
@@ -1,44 +1,90 @@
+<h1 class="listQuizHeader">Quiz Library</h1>
+
 <button type="button" class="btn btn-lg btn-addQuiz" id="top"><a href="/quiz/addQuiz">Start Quiz</a></button>
 
 <br><br><br>
+
 {{#if user}}
 {{#if quizzes}}
-<div class="card-deck">
-    {{#each quizzes}}
-    <div class="card ser-col">
-        <div class="card-body">
-            <button type="button" class="btn btn-updateQuiz" id="top">
-                <a href="/quiz/editQuiz/{{id}}">
-                    Update
-                </a>
-            </button>
-            <br>
-            <h6 class="text-muted">#quiz: {{id}}</h6>
-            <br><br><br>
-            <a href="/quiz/quizResult/{{id}}">
-                <h1 class="card-title title">For <br><span class="quizName">{{quizName}}</span></h1>
-            </a>
-            <br><br><br>
-        </div>
-        <div class="card-footer">
-            Created On:
-            <br>
-            <small class="text-muted">{{createdAt}}</small>
-        </div>
-        <div class="card-footer">
-            <h6 class="delete"><a href="/quiz/deleteQuiz/{{id}}" data-toggle="confirmation" data-title="Confirm delete?">
-                    Delete
-            </a></h6>
+<link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
+<section class="carousel" id="carousel">
+    <div class="carousel__wrapper">
+        <div>
+            <div class="carousel__content">
+                <div class="carousel__container">
+                    {{#each quizzes}}
+                    <div class="carousel__slide">
+                        <div class="card">
+                            <div class="card__inner">
+                                <div class="card-body">
+                                    <button type="button" class="btn btn-updateQuiz" id="top">
+                                        <a href="/quiz/editQuiz/{{id}}">
+                                            Update
+                                        </a>
+                                    </button>
+                                    <br>
+                                    <h6 class="text-muted">#quiz: {{id}}</h6>
+                                    <br><br><br>
+                                    <a href="/quiz/quizResult/{{id}}">
+                                        <h4 class="card-title title">For <br><span class="quizName">"{{quizName}}"</span></h4>
+                                    </a>
+                                    <br><br><br>
+                                </div>
+                                <div class="card-footer">
+                                    Created On:
+                                    <br>
+                                    <small class="text-muted">{{createdAt}}</small>
+                                </div>
+                                <div class="card-footer">
+                                        <div class="text-center">
+                                            <!-- Button HTML (to Trigger Modal) -->
+                                            <a href="#myModal" class="trigger-btn delete" data-toggle="modal">Delete</a>
+                                        </div>
+
+                                        <!-- Modal HTML -->
+                                        <form action="/quiz/deleteQuiz/{{id}}">
+                                            <div id="myModal" class="modal fade">
+                                                <div class="modal-dialog modal-confirm">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title">Deletion Confirmation</h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <p>Do you really want to delete {{id}} = {{quizName}}? This process cannot be undone.</p>
+                                                        </div>
+                                                        <div class="modal-footer justify-content-center">
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                                            <button input type="submit" value="Delete" class="btn btn-danger">Delete</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {{/each}}
+                </div>
+                <div id="prev-slide" class="arrow arrow--left">
+                    <i class="bx bx-chevron-left"></i>
+                </div>
+                <div id="next-slide" class="arrow arrow--right">
+                    <i class="bx bx-chevron-right"></i>
+                </div>
+            </div>
         </div>
     </div>
-    {{/each}}
-    {{else}}
-        <div class="empty-div">
-            <h1 class="empty"><i class="fa-solid fa-face-surprise icon"></i><br><br>Oh No!</h1>
-            <h6 class="empty">You currently have no quiz to view. Click on "Start Quiz" to get started!</h6>
-        </div>
-    {{/if}}
+</section>
+{{else}}
+<div class="empty-div">
+    <h1 class="empty"><i class="fa-solid fa-face-surprise icon"></i><br><br>Oh No!</h1>
+    <h6 class="empty">You currently have no quiz to view. Click on "Start Quiz" to get started!</h6>
 </div>
+{{/if}}
 {{/if}}
 
 <style>
@@ -54,6 +100,7 @@
     .delete {
         text-decoration: underline;
         text-align: center;
+        font-weight: bold;
     }
     
     .title {
@@ -74,6 +121,10 @@
         font-size: 15px;
     }
 
+    .listQuizHeader {
+        float: left;
+    }
+
     .empty {
         text-align: center;
     }
@@ -89,6 +140,101 @@
         font-size: 120px;
         color:#ffaa00;
     }
+    
+    .carousel__wrapper {
+    padding: 20px;
+    }
+
+    .carousel__content {
+    max-width: 1500px;
+    margin: 0 auto;
+    position: relative;
+    }
+
+    .carousel__container {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    display: flex;
+    height: 100%;
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
+    border-radius: 25px;
+    }
+
+    .carousel__container::-webkit-scrollbar {
+    display: none;
+    }
+
+    .carousel__slide {
+    min-width: 90%;
+    }
+
+    .card__inner {
+    box-shadow: #F1EDE5 0px 0px 0px 3px;
+    margin: 20px;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    height: 600px;
+    border-radius: 25px;
+    border-color: #d9d9ee;
+    background-color: #fff;
+    padding: 2rem 4rem;
+    }
+
+    .card__inner h4 {
+    font-size: 2rem;
+    margin: 0;
+    color: rgb(170, 155, 155);
+    }
+
+    .card__image img {
+    max-height: 150px;
+    margin-bottom: 1rem;
+    }
+
+    .arrow {
+    display: none;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    top: calc(50% - 10px);
+    background-color: #585858;
+    padding: 5px;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    }
+
+    .arrow i {
+    font-size: 1.5rem;
+    color: #fff;
+    }
+
+    .arrow.arrow--right {
+    right: 0%;
+    }
+
+    .arrow.arrow--left {
+    left: 0%;
+    }
+
+    @media screen and (min-width: 1180px) {
+    .carousel__wrapper {
+        padding: 10px;
+    }
+
+    .carousel__slide {
+        min-width: 33.33%;
+        scroll-snap-align: center;
+        position: relative;
+        margin: 1px;
+    }
+    
+    .arrow {
+        display: flex;
+    }
+    }
 
 </style>
 <script>
@@ -99,4 +245,109 @@
     $('#myModal').on('shown.bs.modal', function () {
             $('#myInput').trigger('focus')
         })
+
+    /*--------------------------------------------------------
+        Set carousel config here
+    
+        @autoload : true / false
+        @itemsToBeVisible: Defines how many items should be visible
+        @speed: Speed at which items will be passed in milliseconds
+        ----------------------------------------------------------*/
+        const config = {
+            autoload: true,
+            itemsToBeVisible: 3,
+            speed: 5000
+        };
+
+        /*-------------------
+          Entry point 
+          ---------------------*/
+        function start() {
+            window.onload = function () {
+                setSlidersStyle(config);
+
+                const prevSlideButton = document.getElementById("prev-slide");
+                const nextSlideButton = document.getElementById("next-slide");
+
+                prevSlideButton.addEventListener("click", () => {
+                    navigate("backward", config);
+                });
+
+                nextSlideButton.addEventListener("click", () => {
+                    navigate("forward", config);
+                });
+
+                if (config.autoload) {
+                    playCarousel(nextSlideButton, config);
+                }
+            };
+        }
+
+        /*--------------------------------------------------------------
+            Sets the style of slides based on the number of visible items.
+          ---------------------------------------------------------------*/
+        function setSlidersStyle(config) {
+            document.querySelector(
+                "style"
+            ).textContent += `@media screen and (min-width:1180px) { .carousel__slide{ min-width: ${100 / config.itemsToBeVisible
+                }% } }`;
+        }
+
+        /*----------------------------------------
+           Performs the sliding behavior of items.
+          ----------------------------------------*/
+        function navigate(position, config) {
+            const carouselEl = document.getElementById("carousel");
+            const slideContainerEl = carouselEl.querySelector(".carousel__container");
+            const slideEl = carouselEl.querySelector(".carousel__slide");
+            let slideWidth = slideEl.offsetWidth;
+            slideContainerEl.scrollLeft = this.getNewScrollPosition(
+                position,
+                slideContainerEl,
+                slideWidth,
+                config
+            );
+        }
+
+        /*-------------------------------
+           Get the new scroll position.
+          ---------------------------------*/
+        function getNewScrollPosition(position, slideContainerEl, slideWidth, config) {
+            const maxScrollLeft =
+                slideContainerEl.scrollWidth - slideWidth * config.itemsToBeVisible;
+            if (position === "forward") {
+                const x = slideContainerEl.scrollLeft + slideWidth;
+                return x <= maxScrollLeft ? x : 0;
+            } else {
+                const x = slideContainerEl.scrollLeft - slideWidth;
+                return x >= 0 ? x : maxScrollLeft;
+            }
+        }
+
+        /*-------------------------------
+          Autoplay
+          ---------------------------------*/
+        function playCarousel(nextButton, config) {
+            const play = () => {
+                nextButton.click();
+                setTimeout(play, config.speed);
+            };
+            play();
+        }
+
+        start();
+
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/jquery/jquery.slim.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for all pages-->
+<script src="js/sb-admin-2.min.js"></script>
