link voucher 0.1 progress

--- a/views/voucher/addVoucher.handlebars
+++ b/views/voucher/addVoucher.handlebars
@@ -29,7 +29,7 @@
                         <label for="dtype">Discount Type:</label>
                         <br>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" id="% off" value="% off" name="dtype" checked>
+                            <input class="form-check-input" type="radio" id="% off" value="% off" name="dtype" required>
                             <label class="form-check-label" for="% off">% off</label>
                         </div>
                         <div class="form-check form-check-inline">
