--- a/views/cart/cart.handlebars
+++ b/views/cart/cart.handlebars
@@ -134,13 +134,16 @@
                     <p class="col-sm-3" style="float: right;" id="gst"></p>
                 </div>
                 <hr size="12px" width="100%">
-                <label for="email"><b>Voucher: </b></label>
-                <form action="#" style="display: inline;">
+                
+                <label for="code"><b>Voucher: </b></label>
+                {{!-- <form action="#" style="display: inline;"> --}}
+                <form method="POST" action="#">
                     <div class="form-group">
-
-                        <input type="text" class="form-control col-sm-9" id="promo_code"
+                        <input type="text" class="form-control col-sm-9" id="promo_code" name="code" value="{{code}}"
                             placeholder="Enter Your Voucher Code Here..." style="float: left; width: 450px;">
-                        <button type="submit" class="btn btn-secondary col-sm-3" style="float: right;">Apply</button>
+                        <button type="submit" class="btn btn-secondary col-sm-3" style="float: right ;" id="apply">Apply</button>
+                        <input type="hidden" name="apply" value="apply">
+
                     </div>
                 </form>
                 <hr size="12px" width="100%">
